# GFF3toolkit

./: .appveyor.yml  .codecov.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  ERROR_TAG_Location.md  LICENCE.md  MANIFEST.in  README.md  codecov.yml  gff-QC.md  gff3-QC.md  gff3-merge.md  gff3-sort.md  gff3-to-fasta.md  gff3_QC.md  gff3_fix.md  gff3_sort.md  gff3_to_fasta.md  lib.md  merged.gff  pyproject.toml  setup.cfg  setup.py  tests.py  tests.sh
.github/: HANDOFF.md
.github/workflows/: build.yml  test.yml
__develop__/example_file/: annotations.gff  annotations2.gff
__develop__/function4gff/: __init__.py  function4gff.py
__develop__/inter_model/: __init__.py  inter_model.py
__develop__/intra_model/: intra_model.py
__develop__/single_feature/: __init__.py  single_feature.py
__develop__/template/: __init__.py  function.py  template.py
docs/: Detection-of-GFF3-format-errors.md  Detection-of-GFF3-format-errors.rst  FAQ.md  HANDOFF.md  Makefile  Merge-two-GFF3-files.md  conf.py  gff3_QC.md  gff3_fix.md  gff3_fix.py-documentation.md  gff3_fix.py-documentation.rst  gff3_merge.md  gff3_sort.md  gff3_to_fasta.md  index.rst  make.bat  requirements.txt
example/: annotations.gff
example_file/: annotations1.gff  annotations3.gff  annotations4.gff  annotations5.gff  example.gff3  new_models_w_replace.gff3  reference.gff3  sample.fa  u1.txt  u2.txt
gff3tool/: lib.md
gff3tool/lib/: id_processor.py  (+3 more)
handoff/: HANDOFF.md
lib/: fix.py  function4gff  gff3.py  id_processor.py  inter_model  intra_model  replace_OGS.py  single_feature
test/: tests.py
(+75 files in other folders)
